--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js" crossorigin></script>
+        <script src="/static/js/Chart.bundle.min.js" crossorigin></script>
 
         <!-- Own scripts -->
         <script src="/static/js/scriptUI.js"></script>
