--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,5 +18,7 @@
         <!-- Own scripts -->
         <script src="/static/js/scriptUI.js"></script>
         <script src="/static/js/scriptUI2.js"></script>
+
+        Haista elias paska!
     </body>
 </html>
