--- a/static/css/styleMain.css
+++ b/static/css/styleMain.css
@@ -13,3 +13,8 @@ ul#dataSetList {
     font-size: 16px;
     margin: 5px;
 }
+
+li#countryItem {
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
