--- a/static/css/styleMain.css
+++ b/static/css/styleMain.css
@@ -12,9 +12,11 @@ ul#dataSetList {
     list-style: none;
     font-size: 16px;
     margin: 5px;
+    padding: 0px;
 }
 
 li.countryItem {
     padding-bottom: 10px;
     padding-top: 10px;
+    background-color: lightblue;
 }
