--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,9 +8,9 @@
     <button id="addDataButton" class="btn btn-primary" onclick="handleAddButton(this)">Add data</button>
     <button id="perCapita" class="btn btn-primary" onclick="handlePerCapita(this)">Per capita</button>
     <div id="dataSetContainer">
-        <ul id="dataSetList">
+        <div id="dataSetList" class="list-group">
             
-        </ul>
+        </div>
     </div>
     <canvas id="graphCanvas" width="300" height="200"></canvas>
 </div>
