--- a/static/css/styleMain.css
+++ b/static/css/styleMain.css
@@ -15,9 +15,8 @@ ul#dataSetList {
     padding: 0px;
 }
 
-li.countryItem {
+button.countryItem {
     padding-bottom: 10px;
     padding-top: 10px;
-    background-color: lightblue;
-    width: 50%;
+    font-weight: bold;
 }
