--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,5 @@
 <div class="jumbotron">
+    <h4>Emissions-Reaktor</h4>
     <select class="form-control" id="dropDown">
         {{#each countries}}
         <option>{{this}}</option>
