--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron" id="mainContainer">
     <h4>Emissions-Reaktor</h4>
     <select class="form-control" id="dropDown">
         {{#each countries}}
