--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,6 +7,9 @@
     </select>
     <button id="addDataButton" class="btn btn-primary" onclick="handleAddButton(this)">Add data</button>
     <button id="perCapita" class="btn btn-primary" onclick="handlePerCapita(this)">Per capita</button>
+
+    <span id="infoSpan">First add some countries to the chart using the list. You can then remove countries by clicking on them.</span>
+
     <div id="dataSetContainer">
         <div id="dataSetList" class="list-group">
         </div>
