--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,11 @@
     <button id="addDataButton" class="btn btn-primary" onclick="handleAddButton(this)">Add data</button>
     <button id="perCapita" class="btn btn-primary" onclick="handlePerCapita(this)">Per capita</button>
 
-    <span id="infoSpan">First add some countries to the chart using the list. You can then remove countries by clicking on them.</span>
+    <span id="infoSpan">
+        First add some countries to the chart using the list. You can then remove countries by clicking on them.<br />
+        Note that the Y-axis scales according to the data. It always starts at zero. You can use the mouse to hover over the points<br />
+        to get more accurate statistics.
+    </span>
 
     <div id="dataSetContainer">
         <div id="dataSetList" class="list-group">
