--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,8 +9,8 @@
     <button id="perCapita" class="btn btn-primary" onclick="handlePerCapita(this)">Per capita</button>
 
     <span id="infoSpan">
-        First add some countries to the chart using the list. You can then remove countries by clicking on them.<br />
-        Note that the Y-axis scales according to the data. It always starts at zero. You can use the mouse to hover over the points<br />
+        First add some countries to the chart using the list. You can then remove countries by clicking on them.
+        Note that the Y-axis scales according to the data. It always starts at zero. You can use the mouse to hover over the points
         to get more accurate statistics.
     </span>
 
