--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,12 +7,13 @@
     </select>
     <button id="addDataButton" class="btn btn-primary" onclick="handleAddButton(this)">Add data</button>
     <button id="perCapita" class="btn btn-primary" onclick="handlePerCapita(this)">Per capita</button>
-
+    <br />
     <span id="infoSpan">
-        First add some countries to the chart using the list. You can then remove countries by clicking on them.
-        Note that the Y-axis scales according to the data. It always starts at zero. You can use the mouse to hover over the points
-        to get more accurate statistics.
+        First add some countries to the chart using the list and the 'Add' button. You can then remove countries by clicking on them.
+        <br />Note that the Y-axis scales according to the data. It always starts at zero.
+        <br />You can use the mouse to hover over the points to get more accurate statistics.
     </span>
+    <br />
 
     <div id="dataSetContainer">
         <div id="dataSetList" class="list-group">
