--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,9 +9,10 @@
     <button id="perCapita" class="btn btn-primary" onclick="handlePerCapita(this)">Per capita</button>
     <br />
     <span id="infoSpan">
-        First add some countries to the chart using the list and the 'Add' button. You can then remove countries by clicking on them.
+        First add some countries to the chart using the list and the 'Add data' button. You can then remove countries by clicking on them.
         <br />Note that the Y-axis scales according to the data. It always starts at zero.
         <br />You can use the mouse to hover over the points to get more accurate statistics.
+        <br /> You can add upto <b>9</b> countries/areas to the chart.
     </span>
     <br />
 
